turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:10: error: ':' expected but ')' found.
	def setCouleurSol(couleur) {
                                 ^LangtonsAnt:15: error: identifier expected but '}' found.
} 
^